// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletVote multi vote networks should render a vote for multiple active and resigned delegates 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                hint-small.svg
              </svg>
            </div>
          </span>
          <span
            class="font-semibold"
          >
            Active 1
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               / Resigned 1
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render a vote for multiple active and standby delegates 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                hint-small.svg
              </svg>
            </div>
          </span>
          <span
            class="font-semibold"
          >
            Active 1
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               / Standby 1
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render a vote for multiple active, standby and resigned delegates 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            3
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                hint-small.svg
              </svg>
            </div>
          </span>
          <span
            class="font-semibold"
          >
            Active 1
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               / Standby 1
            </span>
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               & Resigned 1
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render a vote for multiple standby and resigned delegates 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                hint-small.svg
              </svg>
            </div>
          </span>
          <span
            class="font-semibold"
          >
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Standby 1
            </span>
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               / Resigned 1
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render votes when all delegates are active 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="font-semibold text-theme-success-600"
          >
            All Active
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render votes when all delegates are on standby 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                hint-small.svg
              </svg>
            </div>
          </span>
          <span
            class="font-semibold text-theme-warning-500"
          >
            All Standby
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should disable vote button when balance is less than votesAmountStep 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Delegate yet.
          </span>
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </div>
      <div
        class="ml-4 flex"
      >
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Locked Votes
          </span>
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Locked Unvotes
          </span>
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1yqe28v"
      data-testid="WalletVote__button"
      disabled=""
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Delegate yet.
          </span>
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render as all resigned 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Rank
          </span>
          <span>
            N/A
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                hint-small.svg
              </svg>
            </div>
          </span>
          <span
            class="font-semibold text-theme-danger-600"
          >
            All Resigned
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render disabled vote button 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Delegate yet.
          </span>
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1yqe28v"
      data-testid="WalletVote__button"
      disabled=""
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render skelethon if loading 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col rounded-xl border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-800 dark:bg-black md:border-0 md:bg-transparent md:dark:bg-transparent"
    data-testid="WalletVote__skeleton"
  >
    <div
      class="flex w-full items-center px-6 py-4 md:p-0"
    >
      <div
        class="mr-4 hidden md:block"
      >
        <div
          class="border-transparent ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <span>
            <span
              class="flex max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 44px; height: 44px; border-radius: 50%;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex h-10 flex-col justify-between"
      >
        <span>
          <span
            class="flex max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 100px; height: 14px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
        <span>
          <span
            class="flex max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 150px; height: 16px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
      </div>
      <div
        class="ml-auto"
      >
        <span>
          <span
            class="flex max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 100px; height: 44px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex justify-center border-t border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800 md:hidden"
    >
      <div
        class="flex h-10 flex-col items-center justify-between"
      >
        <span>
          <span
            class="flex max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 150px; height: 16px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
        <span>
          <span
            class="flex max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 100px; height: 14px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render the maximum votes 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Votes
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/101
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Delegate yet.
          </span>
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render without votes 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Delegate yet.
          </span>
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote single vote networks should render a vote for a delegate without rank 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span>
            arkx
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Rank
          </span>
          <span>
            N/A
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                hint-small.svg
              </svg>
            </div>
          </span>
          <span
            class="font-semibold text-theme-warning-500"
          >
            Standby
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote single vote networks should render a vote for a standby delegate 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span>
            arkx
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Rank
          </span>
          <span>
            #52
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                hint-small.svg
              </svg>
            </div>
          </span>
          <span
            class="font-semibold text-theme-warning-500"
          >
            Standby
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote single vote networks should render a vote for an active delegate 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span>
            arkx
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Rank
          </span>
          <span>
            #10
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pr-6 md:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Delegate Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="font-semibold text-theme-success-600"
          >
            Active
          </span>
        </div>
      </div>
    </div>
    <button
      class="mt-4 w-full space-x-2 md:mt-0 md:w-auto css-1jhy6v9"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
